--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
         }
       }(window.location))
     </script>
-    <title>React App</title>
+    <title>Fresh Paper</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
